tests/NormalTests/paczka1/fuzzy1/21941711.err
Error in line 1: 8Ggc S298 48,4
Error in line 4: 8Ggc A302 28,8
Error in line 8: 6Kk3NbhNw0h A302 55,8
Error in line 14: 8Ggc S635 85,6
Error in line 20: 3acyWl A302 -2,9
Error in line 18: 3acyWl A302 18,5
Error in line 13: BeO A302 48,6
Error in line 24: BeO S298 82,7
Error in line 30: 6Kk3NbhNw0h A754 228,41
